# Traffic-Regulation-System

./: README.md
a1/: README.md  a1.py  a11.py  a12.py  a13.py  a1ece650.py  test.py
a2/: CMakeLists.txt  CMakeListsw.txt  README (3).md  a2  a2-ece650  a2-ece650.cpp
a3/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  a1-ece65.py  a1-ece650.py  a1-ece650.py~  a2-ece650  a2-ece650.cpp  a2-ece650.cpp~  a3-ece650  a3-ece650.cpp  a3-ece650.cpp~  cmake_install.cmake  ece650-a1.py~  ece650-a3.cpp~  geometry.hpp  rgen  rgen.cpp  rgen.cpp~
a4/: CMakeLists.txt  Makefile  README.md  a4-ece650  a4-ece650.cpp  cmake_install.cmake  run.sh
a4/minisat/: Makefile  cmake_install.cmake  libminisat.so.2.1.0  minisat  minisat_core
a4/minisat/core/: Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h
a4/minisat/simp/: Main.cc
a4/minisat/utils/: Options.h  System.cc
a5/: graphGen
a5/a5/: 1  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  finalproject  finalproject.cpp  run.sh
a5/a5/minisat/: CMakeLists.txt  Makefile  cmake_install.cmake  libminisat.so.2.1.0  minisat  minisat_core
a5/a5/minisat/mtl/: Vec.h
a5/a5/minisat/utils/: System.h
